# HexCalculatorDS

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md
.devcontainer/: Dockerfile  cmake-tools-kits.json  devcontainer.json
.github/workflows/: build.yml  publish-container.yml
cmake/: devkitarm-toolchain.cmake
include/: common.h
source/: main.cc
